# ai-engineer-roadmap-2026

./: .gitignore  README.md  pyproject.toml  repos.md
papers/: 2026-q1.md  2026-q2.md  2026-q3.md  2026-q4.md
portfolio-templates/: fintech-ai-compliance.md  healthcare-ai-safety.md  llm-gateway.md  medical-image-ai.md  production-rag.md
resources/: phase-1-foundations.md  phase-2-deep-learning.md  phase-3-llms.md  phase-4-mlops.md  phase-5-specialisation.md
scripts/: validate_roadmap.py
tests/: test_roadmap.py
